--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Maps</title>
   </head>
   <body>
+    <div id="map" style="height: 500px"></div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=API+KEY"></script>
     <script src="./src/index.ts"></script>
   </body>
 </html>
